# HIMAS-MLOps-POC

./: Dockerfile  docker-compose.yml  hospital_client.py  main_himas_federated.py  pyproject.toml
src/data/: medical_datasets.py
src/federated/: flower_client.py  flower_server.py
src/storage/: medical_knowledge.py
